# hopscout

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: make_coastline.py
crates/hopscout-cli/: Cargo.toml  build.rs
crates/hopscout-cli/src/: fields.rs  main.rs  report.rs  ui.rs
crates/hopscout-core/: Cargo.toml
crates/hopscout-core/src/: alert.rs  backend.rs  brand.rs  caps.rs  engine.rs  fields.rs  lib.rs  model.rs  report.rs  session.rs  stats.rs
crates/hopscout-enrich/: Cargo.toml
crates/hopscout-enrich/src/: cymru.rs  geo.rs  lib.rs
crates/hopscout-gui/: Cargo.toml  build.rs
crates/hopscout-gui/src/: coastline.rs  main.rs  map.rs  sparkline.rs  table.rs  theme.rs  topo.rs
crates/hopscout-helper/: Cargo.toml
crates/hopscout-helper/src/: main.rs
crates/hopscout-net/: Cargo.toml
crates/hopscout-net/examples/: caps.rs  mtu.rs  trace.rs
crates/hopscout-net/src/: caps.rs  elevate.rs  ext.rs  factory.rs  icmp.rs  iface.rs  ipc.rs  lib.rs  npcap.rs  packet.rs  raw.rs  tcp.rs
docs/: RELEASING.md
installer/: hopscout.wxs
packaging/winget/: ABowlOfEleven.hopscout.installer.yaml
packaging/winget/manifests/a/ABowlOfEleven/hopscout/0.1.0/: ABowlOfEleven.hopscout.installer.yaml  ABowlOfEleven.hopscout.locale.en-US.yaml  ABowlOfEleven.hopscout.yaml
packaging/winget/manifests/a/ABowlOfEleven/hopscout/0.1.1/: ABowlOfEleven.hopscout.installer.yaml  ABowlOfEleven.hopscout.locale.en-US.yaml  ABowlOfEleven.hopscout.yaml
