[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["hopscout contributors"]
repository = "https://github.com/ABowlOfEleven/hopscout"
rust-version = "1.85"

# Unsafe is forbidden everywhere EXCEPT hopscout-net, which is the single
# sanctioned Win32 FFI boundary and opts out of these workspace lints.
[workspace.lints.rust]
unsafe_code = "forbid"

# Faster iterative debug builds for the heavy dependency tree (egui, ratatui).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = true
