[package]
name = "hopscout-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Backend-agnostic probe engine, session model, and rolling stats for hopscout"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
