[package]
name = "hopscout-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Background hop enrichment for hopscout: reverse DNS + origin ASN (Team Cymru)"

[dependencies]
hopscout-core = { version = "0.1.0", path = "../hopscout-core" }
dns-lookup = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true
