[package]
name = "hopscout-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "hopscout desktop GUI — live trace table + per-hop sparklines (egui)"

# GUI binary. NB: must NOT case-collide with the CLI's `hopscout.exe` -- Windows
# paths are case-insensitive, so `HopScout.exe` and `hopscout.exe` would clobber
# each other in target/ and in the install dir. The Start Menu label is still
# "hopscout" (set in the installer), independent of this file name.
[[bin]]
name = "hopscout-gui"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "B6E2F0A1-7C43-4D58-9E10-2A6B5C8D4F31"
path-guid = "C3D5A2E4-8B16-4F70-9A21-7E0C1B2D3A45"

[dependencies]
hopscout-core = { version = "0.1.0", path = "../hopscout-core" }
hopscout-net = { version = "0.1.0", path = "../hopscout-net" }
hopscout-enrich = { version = "0.1.0", path = "../hopscout-enrich" }
directories = "6.0.0"
eframe = "0.34.3"
egui = "0.34.3"
egui_extras = "0.34.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"

[lints]
workspace = true

# Windows-only: embeds icon + version metadata into the .exe.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"
