[package]
name = "hopscout-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Elevated probe helper for hopscout - owns the privileged sockets, serves over a named pipe (privilege separation)"

[[bin]]
name = "hopscout-helper"
path = "src/main.rs"

[dependencies]
hopscout-net = { version = "0.1.1", path = "../hopscout-net" }

[lints]
workspace = true
