[package]
name = "hopscout-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "hopscout's Win32 FFI boundary: ICMP (rung 1) today, raw sockets + Npcap later"

# NOTE: this crate deliberately does NOT inherit the workspace `unsafe_code =
# forbid` lint. It is the single sanctioned FFI boundary; all unsafe lives here
# behind a safe API, each block carrying a `// SAFETY:` justification.

[dependencies]
hopscout-core = { version = "0.1.0", path = "../hopscout-core" }

[target.'cfg(windows)'.dependencies]
libloading = "0.8" # runtime-load Npcap's wpcap.dll (never bundled — license)
socket2 = { version = "0.6", features = ["all"] } # `all` gates Type::RAW etc.
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_IO",                   # gates Icmp[6]SendEcho2 (APC/event variant)
    "Win32_Networking_WinSock",          # SOCKADDR_IN6 / IN6_ADDR / AF_INET6 for IPv6
    "Win32_Security",                    # TOKEN_ELEVATION (rung-2 capability check)
    "Win32_System_Threading",            # OpenProcessToken / GetCurrentProcess
    "Win32_UI_Shell",                    # ShellExecuteW (runas) for self-elevation
    "Win32_UI_WindowsAndMessaging",      # SW_NORMAL show command
    "Win32_System_Pipes",                # named-pipe IPC for the elevated helper
    "Win32_Storage_FileSystem",          # PIPE_ACCESS_DUPLEX + CreateNamedPipeW gate
] }

# Used only by the headless `trace` example to exercise enrichment end-to-end.
[dev-dependencies]
hopscout-enrich = { version = "0.1.0", path = "../hopscout-enrich" }
